Cap nhap css section Course section

--- a/css/ac_style.css
+++ b/css/ac_style.css
@@ -14,7 +14,9 @@
   width: 100%;
 }
 
-section {
+.for-course,
+.first-place,
+.third-place {
   unicode-bidi: isolate;
   border: 0;
   font-size: 100%;
