--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
-
+body {
+  font-family: 'Open Sans', sans-serif;
+  background-color: #fdf6ea;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 
 footer {
   background-color: #F5E9D4;
   text-align: center;
+  font-size: 14px;
 }
 
 .footer-logo {
@@ -17,15 +24,15 @@ footer {
 
 .footer-logo img {
   background-color: #fdf6ea; /* black background */
-  padding: 12px; /* adjust padding as needed */
+  padding: 8px; /* adjust padding as needed */
   border-radius: 50%; /* make it round */
 }
 
 .footer-content {
   display: flex;
-  justify-content: center; /* Center align footer content */
+  justify-content: justify; /* Center align footer content */
   flex-wrap: wrap;
-  max-width: 2000px; /* Set maximum width for the footer content */
+  max-width: 1190px; /* Set maximum width for the footer content */
   margin: 0 auto; /* Center align the footer content */
 }
 
@@ -38,6 +45,7 @@ footer {
 }
 
 .footer-column h3 {
+  font-family: 'Raleway', sans-serif;
   color: #303030; /* Set link color */
   font-size: 20px; /* Set font size */
 }
@@ -46,7 +54,7 @@ footer {
 .footer-column a {
   margin-bottom: 10px;
   margin-top: 10px;
-  color: #333;
+  color: #808080;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -54,6 +62,7 @@ footer {
 .footer-column.about-us p {
   text-align: justify; /* Justify text alignment */
   line-height: 1.5; /* Adjust the line height to increase or decrease spacing */
+  font-size: 14px;
 }
 
 .footer-column a:hover {
@@ -74,35 +83,31 @@ footer {
 
 .footer-column.popular-courses h3 {
   margin-bottom: 15px;
-  color: #303030; /* Set link color */
   font-size: 20px; /* Set font size */
 }
 
 .footer-column.popular-courses a {
   display: block; /* Make links block-level for better spacing */
-  margin-top: 28px; /* Adjust margin for spacing */
-  margin-bottom: 10px; /* Adjust margin for spacing */
+  margin-top: 0px; /* Adjust margin for spacing */
+  margin-bottom: 5px; /* Adjust margin for spacing */
   color: #303030; /* Set link color */
   text-decoration: none; /* Remove underline from links */
   font-size: 16px; /* Set font size */
+  transition: color 0.5s ease; /* Add transition for color change */
+}
+
+.footer-column.popular-courses a:hover {
+  color: #DA853D; /* Change link color on hover */
 }
 
 .footer-column.popular-courses a span {
   display: block; /* Make the span a block element to break to a new line */
   color: #838c48; /* Set color for "Free" */
   font-size: 16px; /* Set font size */
+  margin-top: 10px;
   pointer-events: none; /* Disable link */
 }
-.footer-column.popular-courses a:not(:last-child)::after {
-  content: '';
-  display: block;
-  width: 100%; /* Width to match the width of its parent (the anchor tag) */
-  height: 1px; /* Thickness of the underline */
-  background-color: rgb(119, 119, 119);; /* Color of the underline */
-  position: absolute;
-  bottom: -15px; /* Adjust based on the space you want between the item and the line */
-  left: 0;
-}
+
 .footer-column.popular-courses a:not(:last-child) {
   position: relative; /* Ensure the anchor is positioned relative for absolute positioning of pseudo-element */
 }
@@ -126,6 +131,8 @@ footer {
   margin-top: 10px;
   cursor: pointer;
   border-radius: 5px;
+  transition: color 1s ease, background-color 1s ease;
+  font-size: 14px;
 }
 
 .btn:hover {
@@ -135,12 +142,12 @@ footer {
 
 .footer-column.quick-links a i.Icons {
   color: #808080; /* Adjust icon color */
-  font-size: 10px; /* Adjust icon size */
+  font-size: 7px; /* Adjust icon size */
 }
 .footer-column.quick-links a {
   position: relative; /* Ensure the anchor is positioned relative for absolute positioning of pseudo-element */
   text-decoration: none; /* Remove default underline */
-  color: #333; /* Adjust text color as needed */
+  color: #808080; /* Adjust text color as needed */
   display: block; /* Make the anchor an inline-block element */
   margin-top: 20px; /* Adjust margin between links */
   margin-bottom: 30px; /* Adjust margin between links */
@@ -193,19 +200,21 @@ footer {
 }
 
 .footer-column.contact-us p {
-  color: #333; /* Text color */
+  color: #808080;; /* Text color */
   margin-top: 35px;
   margin-bottom: 10px; /* Adjust margin for spacing */
   display: flex; /* Flexbox layout for aligning items */
   align-items: center; /* Align items vertically */
+  font-size: 14px;
 }
 
 .footer-column.contact-us a {
-  color: #333; /* Text color */
+  color: #808080; /* Text color */
   margin-top: 28px;
   margin-bottom: auto; /* Adjust margin for spacing */
   display: flex; /* Flexbox layout for aligning items */
   align-items: center; /* Align items vertically */
+  font-size: 14px;
 }
 
 .footer-column.contact-us p i.Icons {
